Ajustar investigacao e resposta do Groq